<resources>
    <string name="app_name">ItsDone!</string>
    <string name="criar_nova_conta">Criar nova conta</string>
    <string name="entrar">Entrar</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="salvar">Salvar</string>
    <string name="novo">Novo</string>
    <string name="cadastro">Cadastro</string>
    <string name="ol">Olá</string>
    <string name="aqui_voc_pode_inserir_suas_atividades_ou_anota_es">Aqui você pode inserir suas atividades ou anotações.</string>
</resources>
